# thinkcell-mcp

./: .gitattributes  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  autodeck.py  branding.py  converter.py  diagnostics.py  pyproject.toml  requirements.txt  server.py  tests.py  validator.py
.github/workflows/: tests.yml
charts/: __init__.py  area.py  bar.py  base.py  combo.py  line.py  mekko.py  scatter.py  stacked_bar.py  waterfall.py
